crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_navegacion.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app_base())
---
"┌⟨file⟩/casa───────────────────────────┐┌⟨file⟩/otro───────────────────────────┐"
"│ /docs                                ││  cosa                                │"
"│ /src                                 ││                                      │"
"│ @enlace                              ││                                      │"
"│  notas.txt                           ││                                      │"
"│! �.dat                               ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
" ⟨file⟩/casa  2/5                                                               "
