crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_navigation.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app_base())
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
" ★ ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
" ◉ │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
" ∿ │  /docs                             ││   cosa               1 B            │"
" ⓘ │  /src                              ││                                     │"
" ⋔ │  @enlace                           ││                                     │"
" ≡ │   notas.txt       420 B            ││                                     │"
" ◔ │ ! �.dat             7 B            ││                                     │"
" ◷ │                                    ││                                     │"
" T │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
