crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_palette_abierta.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
"┌⟨file⟩/casa───────────────────────────┐┌⟨file⟩/otro───────────────────────────┐"
"│Nombre▲               Tamaño     Fecha││Nombre▲               Tamaño     Fecha│"
"│  /docs                               ││   cosa                  1 B          │"
"│  /src                                ││                                      │"
"│  @enlace                             ││                                      │"
"│   notas.txt           420 B          ││                                      │"
"│ ! �.dat ┌ Paleta de comandos ──────────────────────────────────────┐         │"
"│         │ cursor.top               ir…ncipio                  Home │         │"
"│         │ viewer.top               ir…ncipio                  Home │         │"
"│         └ /principio  [enter] ejecutar · [esc] cerrar · [f1] ayuda ┘         │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
" ⟨file⟩/casa  2/5                                                               "
