crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_palette_fila_de_plugin_hostil.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: text
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"                                                                                "
"┌/casa─────────────────────────────────┐┌/otro─────────────────────────────────┐"
"│Nombre▲               Tamaño     Fecha││Nombre▲               Tamaño     Fecha│"
"│  /docs                               ││   cosa                  1 B          │"
"│  /src                                ││                                      │"
"│  @enlace┌ Paleta de comandos ──────────────────────────────────────┐         │"
"│   notas.│ [extensión] abc�gpj.exe    …                           — │         │"
"│ ! �.dat └ /  [enter] ejecutar · [esc] cerrar · [f1] ayuda ─────────┘         │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
" /casa  2/5                                                                     "
