crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_palette_hostile_plugin_row.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: text
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   │  @enlace                           ││                                     │"
"   │   not┌ Paleta de comandos ──────────────────────────────────────┐         │"
"   │ ! �.d│                                     [extensi…�gpj.exe —  │         │"
"   │      └ /  [enter] ejecutar · [esc] cerrar · [f1] ayuda ─────────┘         │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
