crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_palette_open.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   │  @enlace                           ││                                     │"
"   │┌ Ir a ────────────────────────────────────────────────────────────────┐   │"
"   ││  ir al principio  cursor.top                                         │   │"
"   ││  ir al principio  viewer.top                                         │   │"
"   │└ ❯>principio_ ────────────────────────────────────────────────────────┘   │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
