crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_plugin_config_panel_80x24.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: text
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   ┌ Demo ──────────────────────────────────────────────────────────────────┐ha│"
"   │> verbose: true                                                         │  │"
"   │  mode: fast                                                            │  │"
"   │   abc�gpj.exe                                                          │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   │                                                                        │  │"
"   └ [Enter] confirmar [Esc] cancelar ──────────────────────────────────────┘  │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
