crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_plugin_decoration_masked_hostile_badge.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
" ★ ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
" ◉ │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
" ∿ │  /docs M                           ││   cosa               1 B            │"
" ⓘ │  /src                              ││                                     │"
" ⋔ │  @enlace                           ││                                     │"
" ≡ │   notas.txt       420 B            ││                                     │"
" ◔ │ ! �.dat             7 B            ││                                     │"
" ◷ │                                    ││                                     │"
" T │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
