crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_popup_historial.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo  Marcar  Paneles  Pestañas  Buscar  Ver  Ayuda                         "
"                                                                                "
"┌⟨file⟩/casa───────────────────────────┐┌⟨file⟩/otro───────────────────────────┐"
"│Nombre▲               Tamaño     Fecha││Nombre▲               Tamaño     Fecha│"
"│  /docs                               ││   cosa                  1 B          │"
"│  /src                                ││                                      │"
"│  @enla┌ Historial ───────────────────────────────────────────────────┐       │"
"│   nota│ ⟨file⟩/proyectos                                             │       │"
"│ ! �.da│ ⟨file⟩/casa/docs                                             │       │"
"│       └──────────────────────────────────────────────────────────────┘       │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
" ⟨file⟩/casa  2/5                                                               "
