crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_popup_history.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   ┌ Historial ────────────────────────────────────────────────────────────┐   │"
"   │ /casa · aquí                                                          │   │"
"   │ /proyectos                                                            │   │"
"   │ /casa/docs                                                            │   │"
"   └ [d] quitar [/] filtrar [Shift+Delete] vaciar [Alt+Enter] otro panel ──┘   │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
