crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_popup_hotlist.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   │  @enlace                           ││                                     │"
"   │   n┌ Favoritos ───────────────────────────────────────────────────┐       │"
"   │ ! �│ trabajo — /home/o/work                                       │       │"
"   │    │ rota ruta inválida                                           │       │"
"   │    └ [Enter] confirmar [Esc] cancelar [a] añadir [d] quitar ──────┘       │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
