crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_quick_search_filter.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
" ★ ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
" ◉ │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
" ∿ │  /docs                             ││   cosa               1 B            │"
" ⓘ │  /src                              ││                                     │"
" ⋔ │   notas.txt       420 B            ││                                     │"
" ≡ │                                    ││                                     │"
" ◔ │                                    ││                                     │"
" ◷ │                                    ││                                     │"
" ❯ │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └ /s 3/5 ────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                       Nombre ↑  UTF-8 "
